--- a/build.xml
+++ b/build.xml
@@ -28,7 +28,7 @@
   </target>
 
   <target name="dist" depends="compile" description="generate the distribution" >
-	 <jar destfile="${dist}/noavclient.jar">
+	 <jar destfile="${dist}/noavclient-0.1.0.jar">
 	    <fileset dir="${build}"/>
 		<zipfileset src="libs/jruby-complete-1.5.1.jar" />
 		<zipfileset src="libs/looks-1.3.1.jar" />
